@@ -1,3 +1,9 @@
+2011-05-12  Jakub Jelinek  <jakub@redhat.com>
+
+	PR tree-optimization/48975
+	* tree-if-conv.c (combine_blocks): Call free_bb_predicate
+	on all bbs here and free and clear ifc_bbs at the end.
+
 2011-05-12  Richard Guenther  <rguenther@suse.de>
 
 	Backport from mainline
